--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "babel-node index.js --presets \"es2015\""
+    "start": "./node_modules/.bin/babel-node index.js --presets \"es2015\""
   },
   "author": "raka aditya",
   "license": "MIT",
   "dependencies": {
+    "babel": "^6.5.2",
+    "babel-cli": "^6.9.0",
     "babel-preset-es2015": "^6.9.0",
     "express": "^4.13.4",
     "express-graphql": "^0.5.3",
